<?xml version="1.0" encoding="utf-8"?>
<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/tableLayout1"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:shrinkColumns="*"
    android:stretchColumns="*" >

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <TextView
            style=""
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/first_name" >
        </TextView>

        <EditText
            android:id="@+id/first_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="textCapWords"
            android:layout_span="2" />
    </TableRow>

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <TextView
            style=""
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/last_name" >
        </TextView>

        <EditText
            android:id="@+id/last_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="textCapWords"
            android:layout_span="2" />
    </TableRow>
    <TableRow
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <TextView
            style=""
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/id" >
        </TextView>

        <EditText
            android:id="@+id/id_number"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="textCapWords"
            android:layout_span="2" />
    </TableRow>
    <TableRow
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <TextView
            style=""
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/birth_day" >
        </TextView>

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="date"
            android:ems="10"
            android:id="@+id/birthday"
            android:layout_column="1"
            android:layout_span="2" />

    </TableRow>
    <TableRow
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <TextView
            style=""
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/country" >
        </TextView>

        <EditText
            android:id="@+id/country"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="textCapWords"
            android:layout_span="2" />
    </TableRow>
    <TableRow
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <TextView
            style=""
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/phone_number" >
        </TextView>

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="phone"
            android:ems="10"
            android:id="@+id/phone_number"
            android:layout_column="1"
            android:layout_span="2" />

    </TableRow>

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <Button
            android:id="@+id/bn_register"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="postData"
            android:text="@string/register" />

        <Button
            android:id="@+id/bn_cancel2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cancel" />

    </TableRow>
</TableLayout>
